cicd/cloudbuild/kustomize/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-petclinic
  labels:
    app: spring-petclinic
spec:
  defaultBackend:
    service:
      name: spring-petclinic
      port:
        number: 8080
